--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <dependency.holographicdisplays-api.version>2.4.9</dependency.holographicdisplays-api.version>
         <dependency.adventure-platform-bukkit.version>4.1.1</dependency.adventure-platform-bukkit.version>
         <dependency.adventure-text-minimessage.version>4.11.0</dependency.adventure-text-minimessage.version>
+        <dependency.authlib.version>1.5.21</dependency.authlib.version>
     </properties>
 
     <dependencies>
@@ -290,6 +291,26 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>com.mojang</groupId>
+            <artifactId>authlib</artifactId>
+            <version>${dependency.authlib.version}</version>
+            <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>gson</artifactId>
+                    <groupId>com.google.code.gson</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>log4j-api</artifactId>
+                    <groupId>org.apache.logging.log4j</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
             <groupId>net.essentialsx</groupId>
             <artifactId>EssentialsX</artifactId>
             <version>${dependency.essentialsx.version}</version>
@@ -408,6 +429,10 @@
     </dependencies>
 
     <repositories>
+        <repository>
+            <id>minecraft-libraries-repo</id>
+            <url>https://libraries.minecraft.net</url>
+        </repository>
         <repository>
             <id>codemc-repo</id>
             <url>https://repo.codemc.io/repository/maven-public/</url>
