--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: Factions
 version: ${project.version}
 main: com.massivecraft.factions.FactionsPlugin
 authors: [Olof Larsson, Brett Flannigan, drtshock, dariasc, CmdrKittens, mbaxter]
+depend: [ HolographicDisplays ]
 softdepend: [LuckPerms, WorldGuard]
 api-version: 1.13
 website: https://www.spigotmc.org/resources/factionsuuid.1035/
